--- a/imobiles/Base.lproj/Main.storyboard
+++ b/imobiles/Base.lproj/Main.storyboard
@@ -6,8 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,193 +18,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" image="Asset 1" translatesAutoresizingMaskIntoConstraints="NO" id="xP2-Jo-hEt">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" preservesSuperviewLayoutMargins="YES" image="Asset 1" translatesAutoresizingMaskIntoConstraints="NO" id="xP2-Jo-hEt">
                                 <rect key="frame" x="51" y="40" width="312" height="104"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="104" id="J2t-Is-WHu"/>
-                                </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iPd-8K-1at">
-                                <rect key="frame" x="20" y="333" width="154" height="163"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="163" id="Fua-NN-Wbf"/>
-                                    <constraint firstAttribute="width" constant="154" id="rb3-nd-Qlt"/>
-                                </constraints>
-                                <state key="normal" image="fill_form-512"/>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="rb3-nd-Qlt"/>
-                                    </mask>
-                                </variation>
-                                <variation key="heightClass=compact">
-                                    <mask key="constraints">
-                                        <include reference="rb3-nd-Qlt"/>
-                                    </mask>
-                                </variation>
-                                <variation key="widthClass=regular">
-                                    <mask key="constraints">
-                                        <exclude reference="Fua-NN-Wbf"/>
-                                    </mask>
-                                </variation>
-                                <connections>
-                                    <action selector="TodoList:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SOd-lM-U7W"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y15-SZ-i0q">
-                                <rect key="frame" x="204" y="333" width="154" height="163"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="154" id="b2x-1o-Qrs"/>
-                                    <constraint firstAttribute="width" constant="154" id="s7Q-TM-28L"/>
-                                </constraints>
-                                <state key="normal" image="focus"/>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="s7Q-TM-28L"/>
-                                    </mask>
-                                </variation>
-                                <variation key="heightClass=compact">
-                                    <mask key="constraints">
-                                        <exclude reference="b2x-1o-Qrs"/>
-                                        <include reference="s7Q-TM-28L"/>
-                                    </mask>
-                                </variation>
-                                <connections>
-                                    <action selector="QRScan:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Z1d-6S-cHV"/>
-                                </connections>
-                            </button>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BNQ-ua-uGH" userLabel="ButtonContainer">
+                                <rect key="frame" x="20" y="360" width="374" height="265"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y15-SZ-i0q">
+                                        <rect key="frame" x="183" y="28" width="191" height="164"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" image="focus"/>
+                                        <connections>
+                                            <action selector="QRScan:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Z1d-6S-cHV"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iPd-8K-1at">
+                                        <rect key="frame" x="8" y="28" width="155" height="164"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" image="fill_form-512"/>
+                                        <connections>
+                                            <action selector="TodoList:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SOd-lM-U7W"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="y15-SZ-i0q" secondAttribute="trailing" constant="150" id="0Fj-1K-3jY"/>
-                            <constraint firstItem="xP2-Jo-hEt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="1QA-dK-73D"/>
-                            <constraint firstItem="y15-SZ-i0q" firstAttribute="centerY" secondItem="iPd-8K-1at" secondAttribute="centerY" id="5tt-4k-JUY"/>
-                            <constraint firstItem="y15-SZ-i0q" firstAttribute="leading" relation="lessThanOrEqual" secondItem="iPd-8K-1at" secondAttribute="trailing" constant="50" id="7Yu-qg-mPD"/>
-                            <constraint firstItem="iPd-8K-1at" firstAttribute="width" secondItem="y15-SZ-i0q" secondAttribute="width" id="7xn-YM-e0d"/>
-                            <constraint firstItem="iPd-8K-1at" firstAttribute="width" secondItem="y15-SZ-i0q" secondAttribute="height" multiplier="259:163" id="8AQ-xt-Re6"/>
-                            <constraint firstItem="xP2-Jo-hEt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AU4-Kf-muc"/>
-                            <constraint firstItem="iPd-8K-1at" firstAttribute="height" secondItem="y15-SZ-i0q" secondAttribute="height" id="GdW-it-Cgz"/>
-                            <constraint firstItem="iPd-8K-1at" firstAttribute="bottom" secondItem="y15-SZ-i0q" secondAttribute="bottom" id="K4Y-OG-4UB"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="iPd-8K-1at" secondAttribute="bottom" constant="224" id="Ns7-g8-An9">
-                                <variation key="widthClass=compact" constant="50"/>
-                            </constraint>
-                            <constraint firstItem="iPd-8K-1at" firstAttribute="width" secondItem="y15-SZ-i0q" secondAttribute="width" id="PGo-Ys-7mt"/>
-                            <constraint firstItem="y15-SZ-i0q" firstAttribute="leading" secondItem="iPd-8K-1at" secondAttribute="trailing" constant="26" id="PWS-sd-Zge">
-                                <variation key="widthClass=regular" constant="150"/>
-                            </constraint>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="y15-SZ-i0q" secondAttribute="bottom" constant="134" id="X5X-OC-sGz">
-                                <variation key="heightClass=compact" constant="50"/>
-                            </constraint>
-                            <constraint firstItem="iPd-8K-1at" firstAttribute="top" secondItem="y15-SZ-i0q" secondAttribute="top" id="brn-0F-LWR"/>
-                            <constraint firstItem="iPd-8K-1at" firstAttribute="height" secondItem="y15-SZ-i0q" secondAttribute="height" id="c1H-kY-DuH"/>
-                            <constraint firstItem="y15-SZ-i0q" firstAttribute="leading" secondItem="iPd-8K-1at" secondAttribute="trailing" constant="8" id="ckP-uT-6hn"/>
-                            <constraint firstItem="iPd-8K-1at" firstAttribute="width" secondItem="y15-SZ-i0q" secondAttribute="height" multiplier="154:155" id="dpi-Az-nAA"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="iPd-8K-1at" secondAttribute="bottom" constant="50" id="fXP-GQ-QD1"/>
-                            <constraint firstItem="iPd-8K-1at" firstAttribute="top" secondItem="xP2-Jo-hEt" secondAttribute="bottom" constant="8" symbolic="YES" id="h4k-u6-kr0"/>
-                            <constraint firstItem="y15-SZ-i0q" firstAttribute="leading" secondItem="iPd-8K-1at" secondAttribute="trailing" constant="30" id="m3F-Ze-HfA"/>
-                            <constraint firstItem="iPd-8K-1at" firstAttribute="height" secondItem="y15-SZ-i0q" secondAttribute="height" id="ouW-fj-38j"/>
-                            <constraint firstItem="iPd-8K-1at" firstAttribute="leading" relation="lessThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="150" id="ppP-U0-j78"/>
-                            <constraint firstItem="iPd-8K-1at" firstAttribute="top" secondItem="xP2-Jo-hEt" secondAttribute="bottom" constant="38" id="qYd-eA-ztX">
-                                <variation key="heightClass=regular" constant="189"/>
-                            </constraint>
-                            <constraint firstItem="iPd-8K-1at" firstAttribute="top" secondItem="y15-SZ-i0q" secondAttribute="top" id="saB-u9-vxG"/>
-                            <constraint firstItem="iPd-8K-1at" firstAttribute="width" secondItem="y15-SZ-i0q" secondAttribute="width" id="shp-QQ-jlp"/>
-                            <constraint firstItem="iPd-8K-1at" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="128" id="tPX-6D-Vfj"/>
-                            <constraint firstItem="iPd-8K-1at" firstAttribute="bottom" secondItem="y15-SZ-i0q" secondAttribute="bottom" id="tiW-dt-Kcj"/>
-                            <constraint firstItem="iPd-8K-1at" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="uIN-gb-QgH"/>
-                            <constraint firstItem="iPd-8K-1at" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="150" id="w8w-8p-g2Q">
-                                <variation key="heightClass=regular" constant="20"/>
-                            </constraint>
-                            <constraint firstItem="xP2-Jo-hEt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="51" id="xF9-qU-qUC"/>
-                            <constraint firstItem="y15-SZ-i0q" firstAttribute="top" secondItem="xP2-Jo-hEt" secondAttribute="bottom" constant="8" symbolic="YES" id="xQd-U6-Yk0"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="0Fj-1K-3jY"/>
-                                <exclude reference="Ns7-g8-An9"/>
-                                <exclude reference="X5X-OC-sGz"/>
-                                <exclude reference="fXP-GQ-QD1"/>
-                                <exclude reference="7xn-YM-e0d"/>
-                                <exclude reference="8AQ-xt-Re6"/>
-                                <exclude reference="GdW-it-Cgz"/>
-                                <exclude reference="brn-0F-LWR"/>
-                                <exclude reference="c1H-kY-DuH"/>
-                                <exclude reference="dpi-Az-nAA"/>
-                                <exclude reference="h4k-u6-kr0"/>
-                                <exclude reference="ouW-fj-38j"/>
-                                <exclude reference="shp-QQ-jlp"/>
-                                <exclude reference="tPX-6D-Vfj"/>
-                                <exclude reference="tiW-dt-Kcj"/>
-                                <exclude reference="uIN-gb-QgH"/>
-                                <exclude reference="5tt-4k-JUY"/>
-                                <exclude reference="PWS-sd-Zge"/>
-                                <exclude reference="ckP-uT-6hn"/>
-                                <exclude reference="xQd-U6-Yk0"/>
-                            </mask>
-                        </variation>
-                        <variation key="heightClass=compact">
-                            <mask key="constraints">
-                                <include reference="0Fj-1K-3jY"/>
-                                <include reference="fXP-GQ-QD1"/>
-                                <include reference="brn-0F-LWR"/>
-                                <include reference="dpi-Az-nAA"/>
-                                <exclude reference="h4k-u6-kr0"/>
-                                <include reference="ouW-fj-38j"/>
-                                <include reference="shp-QQ-jlp"/>
-                                <include reference="tPX-6D-Vfj"/>
-                                <include reference="tiW-dt-Kcj"/>
-                            </mask>
-                        </variation>
-                        <variation key="widthClass=compact">
-                            <mask key="constraints">
-                                <include reference="PGo-Ys-7mt"/>
-                                <include reference="ppP-U0-j78"/>
-                                <include reference="7Yu-qg-mPD"/>
-                                <exclude reference="ckP-uT-6hn"/>
-                            </mask>
-                        </variation>
-                        <variation key="widthClass=regular">
-                            <mask key="constraints">
-                                <include reference="X5X-OC-sGz"/>
-                                <include reference="7xn-YM-e0d"/>
-                                <exclude reference="8AQ-xt-Re6"/>
-                                <exclude reference="GdW-it-Cgz"/>
-                                <exclude reference="K4Y-OG-4UB"/>
-                                <exclude reference="PGo-Ys-7mt"/>
-                                <include reference="c1H-kY-DuH"/>
-                                <exclude reference="ppP-U0-j78"/>
-                                <exclude reference="qYd-eA-ztX"/>
-                                <exclude reference="saB-u9-vxG"/>
-                                <exclude reference="w8w-8p-g2Q"/>
-                                <include reference="5tt-4k-JUY"/>
-                                <exclude reference="7Yu-qg-mPD"/>
-                                <include reference="PWS-sd-Zge"/>
-                                <exclude reference="m3F-Ze-HfA"/>
-                                <include reference="xQd-U6-Yk0"/>
-                            </mask>
-                        </variation>
-                        <variation key="heightClass=compact-widthClass=regular">
-                            <mask key="constraints">
-                                <exclude reference="Ns7-g8-An9"/>
-                                <exclude reference="X5X-OC-sGz"/>
-                                <exclude reference="7xn-YM-e0d"/>
-                                <exclude reference="c1H-kY-DuH"/>
-                                <exclude reference="5tt-4k-JUY"/>
-                                <exclude reference="PWS-sd-Zge"/>
-                                <exclude reference="xQd-U6-Yk0"/>
-                            </mask>
-                        </variation>
-                        <variation key="heightClass=regular-widthClass=compact">
-                            <mask key="constraints">
-                                <include reference="m3F-Ze-HfA"/>
-                            </mask>
-                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2552.4456521739135" y="-807.24637681159425"/>
+            <point key="canvasLocation" x="2550.7246376811595" y="-808.69565217391312"/>
         </scene>
         <!--Code View Controller-->
         <scene sceneID="0zS-Yw-k1L">
